--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -145,7 +145,7 @@
 
     <div class="list simple-list searchbar-not-found">
       <ul>
-        <li>Bank not found</li>
+        <li>Coin not found</li>
       </ul>
     </div>
 
@@ -154,7 +154,7 @@
 
       <div class="tabs-swipeable-wrap">
           <div class="tabs">
-            <div id="market" class="page-content tab tab-active ptr-content ptr-content-market" data-ptr-distance="55">
+            <div id="market" class="page-content tab tab-active ptr-content ptr-content-market infinite-scroll-content" data-ptr-distance="55">
 
               <div class="ptr-preloader">
               <div class="preloader"></div>
@@ -164,7 +164,7 @@
               
 
 
-                 <div class="list no-hairlines-md no-hairlines-ios banks-list searchbar-found search-list">
+                 <div class="list no-hairlines-md no-hairlines-ios banks-list searchbar-found search-list coin-stack-list">
                     <ul id="coin-stack-list">
 
 
@@ -180,7 +180,7 @@
                   </div>
 
 
-
+                  <div class="preloader infinite-scroll-preloader"></div>
                 </div>
 
 
