--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
                <div class="text-color-white" style="background-image: url('imgs/bg.jpg'); background-repeat: no-repeat; background-size: cover; width: 100%; height:100%; background-position: center top;">
 
 
-            <div class="sweet-nylon" style="opacity: 0.7; width: 100%; height: 100%; position: absolute;background-color: #043a7a;"></div>
+            <div class="sweet-nylon" style="opacity: 0.7; width: 100%; height: 100%; position: absolute;background-color: #000000;"></div>
 
                       <div class="block text-color-white text-center" style="position: absolute; width: 100%; top:20%;">
                         <img src="imgs/qb.png" style="margin: 0 auto; display: block; max-width:140px;">
@@ -71,6 +71,9 @@
 <script src="cordova.js"></script>
 <script src="js/framework7.min.js"></script>
 <script src="js/routes.js"></script>
+<script src="js/moment.min.js"></script>
+<script src="js/Chart.min.js"></script>
+<script src="js/utils.js"></script>
 <script src="js/app.js"></script>
 <script type="text/javascript">
 
