--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -164,7 +164,7 @@
               
 
 
-                 <div class="list no-hairlines-md no-hairlines-ios banks-list searchbar-found search-list coin-stack-list">
+                 <div class="list no-hairlines-md no-hairlines-ios searchbar-found search-list coin-stack-list">
                     <ul id="coin-stack-list">
 
 
@@ -186,7 +186,7 @@
 
 
 
-                 <div id="favorites" class="page-content tab ptr-content-favorites" data-ptr-distance="55">
+                 <div id="favorites" class="page-content tab">
 
                 
 
